[gd_scene load_steps=13 format=2]

[ext_resource path="res://script/wario_listen.gd" type="Script" id=1]
[ext_resource path="res://actor.tscn" type="PackedScene" id=2]
[ext_resource path="res://asset/Button1.png" type="Texture" id=3]
[ext_resource path="res://OpenWarioButton.gd" type="Script" id=4]
[ext_resource path="res://asset/brandon.webm" type="VideoStream" id=5]
[ext_resource path="res://BrandonSummonB.gd" type="Script" id=6]
[ext_resource path="res://asset/Brandbut.png" type="Texture" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]
[ext_resource path="res://asset/vignette.png" type="Texture" id=9]

[sub_resource type="InputEventAction" id=1]
action = "ui_select"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="AudioStreamMicrophone" id=3]

[node name="main" type="Node"]

[node name="Icon" type="Sprite" parent="."]
modulate = Color( 0.0156863, 0.0313726, 0.282353, 1 )
position = Vector2( 319, 461 )
scale = Vector2( 20, 20 )
texture = ExtResource( 8 )

[node name="Vignette" type="Sprite" parent="."]
position = Vector2( 308, 206 )
scale = Vector2( -2.28526, -3.23641 )
texture = ExtResource( 9 )

[node name="gui" type="CanvasLayer" parent="."]
visible = false

[node name="center" type="CenterContainer" parent="gui"]
anchor_top = 0.654167
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="panel" type="PanelContainer" parent="gui/center"]
margin_left = 170.0
margin_top = 24.0
margin_right = 470.0
margin_bottom = 141.0
rect_min_size = Vector2( 300, 117 )

[node name="sort" type="VBoxContainer" parent="gui/center/panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="text" type="Label" parent="gui/center/panel/sort"]
margin_top = 32.0
margin_right = 286.0
margin_bottom = 46.0
text = "Let Wario hear you!"
align = 1

[node name="input" type="OptionButton" parent="gui/center/panel/sort"]
margin_top = 50.0
margin_right = 286.0
margin_bottom = 70.0

[node name="record" type="Button" parent="gui/center/panel/sort"]
visible = false
margin_top = 59.0
margin_right = 286.0
margin_bottom = 79.0
toggle_mode = true
shortcut = SubResource( 2 )
text = "Talk to Wario"

[node name="text2" type="Label" parent="gui/center/panel/sort"]
visible = false
margin_top = 89.0
margin_right = 286.0
margin_bottom = 103.0
size_flags_vertical = 10
text = "Wario is not listening..."
align = 1

[node name="wario_listen" type="Node" parent="."]
script = ExtResource( 1 )
label_listening_path = NodePath("../gui/center/panel/sort/text2")
input_spinner_path = NodePath("../gui/center/panel/sort/input")

[node name="record" type="AudioStreamPlayer" parent="wario_listen"]
stream = SubResource( 3 )
autoplay = true
bus = "AudioIn"

[node name="playback" type="AudioStreamPlayer" parent="wario_listen"]
bus = "Wario"

[node name="poll_rate" type="Timer" parent="wario_listen"]
wait_time = 0.05
autostart = true

[node name="debounce" type="Timer" parent="wario_listen"]
one_shot = true

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 640, 480 )
size_override_stretch = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="actor" parent="ViewportContainer/Viewport" instance=ExtResource( 2 )]

[node name="cam" type="Camera" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 15 )
current = true
fov = 58.9

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 34.0
margin_top = 368.0
margin_right = 134.0
margin_bottom = 468.0
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )
expand = true
script = ExtResource( 4 )

[node name="BrandonSummon" type="TextureButton" parent="CanvasLayer"]
margin_left = 521.0
margin_top = 366.0
margin_right = 621.0
margin_bottom = 466.0
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 7 )
expand = true
script = ExtResource( 6 )

[node name="VideoPlayer" type="VideoPlayer" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 16.1018, 13.5604 )
stream = ExtResource( 5 )
volume_db = -5.0

[connection signal="item_selected" from="gui/center/panel/sort/input" to="wario_listen" method="_audio_input_selected" flags=3]
[connection signal="toggled" from="gui/center/panel/sort/record" to="wario_listen" method="_on_button_press"]
[connection signal="wario_done" from="wario_listen" to="ViewportContainer/Viewport/actor" method="_voice_recieved"]
[connection signal="wario_listening" from="wario_listen" to="ViewportContainer/Viewport/actor" method="_started_recording"]
[connection signal="finished" from="wario_listen/playback" to="wario_listen" method="_on_finished_speaking"]
[connection signal="timeout" from="wario_listen/poll_rate" to="wario_listen" method="_on_audio_poll"]
[connection signal="timeout" from="wario_listen/debounce" to="wario_listen" method="_on_debounce"]
[connection signal="pressed" from="CanvasLayer/TextureButton" to="CanvasLayer/TextureButton" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="CanvasLayer/BrandonSummon" to="CanvasLayer/BrandonSummon" method="_on_BrandonSummon_pressed"]
[connection signal="finished" from="CanvasLayer/VideoPlayer" to="CanvasLayer/BrandonSummon" method="_on_VideoPlayer_finished"]
